--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,4 +1,12 @@
+$color-black: #111;
 $color-white: #fff;
-$color-black: #000;
 
 $z-preloader: 6;
+
+$default-transition: all 0.5s ease;
+
+$z-header: 2;
+$z-mask: 4;
+$z-preloader: 6;
+
+$default-gap: 3.704vw;
