--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,9 @@
 $color-black: #111;
 $color-white: #fff;
+$color-grey: #9f9f9f;
+$color-purple: #9280e6;
+$color-teal: #3cb7a5;
+$color-orange: #e9512c;
 
 $z-preloader: 6;
 
@@ -10,3 +14,5 @@ $z-mask: 4;
 $z-preloader: 6;
 
 $default-gap: 3.704vw;
+
+$font: 'TT_Norms_var', sans-serif;
