--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -5,11 +5,11 @@
 	outline: none;
 	margin: 0;
 	padding: 0;
-	user-select: none;
 }
 
 body {
-	overflow: hidden;
+	font-family: $font;
+	// overflow: hidden;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -26,4 +26,15 @@ img {
 	max-width: 100%;
 	vertical-align: top;
 	height: auto;
+}
+
+.purple {
+	background: $color-purple;
+}
+.teal {
+	background: $color-teal;
+}
+
+.orange {
+	background: $color-orange;
 }
