portfolio page ok

--- a/assets/scss/_text.scss
+++ b/assets/scss/_text.scss
@@ -3,6 +3,12 @@
 	line-height: 1.1;
 	font-variation-settings: 'wght' 480;
 }
+.h3--black {
+	font-size: 2.3vw;
+	line-height: 1;
+	color: $color-black;
+	font-variation-settings: 'wght' 480;
+}
 
 .big-title {
 	font-size: 4.8vw;
