--- a/assets/scss/_text.scss
+++ b/assets/scss/_text.scss
@@ -2,6 +2,10 @@
 	font-size: 3.7vw;
 	line-height: 1.1;
 	font-variation-settings: 'wght' 480;
+
+	@include media('<phone') {
+		font-size: 9.5vw;
+	}
 }
 .h3--black {
 	font-size: 2.3vw;
@@ -16,12 +20,20 @@
 	font-variation-settings: 'wght' 480;
 	letter-spacing: -2px;
 	text-transform: uppercase;
+
+	@include media('<phone') {
+		font-size: 12vw;
+	}
 }
 
 .p1--grey {
 	color: $color-grey;
 	font-size: 1.58vw;
 	line-height: 1.2;
+
+	@include media('<phone') {
+		font-size: 5.4vw;
+	}
 }
 
 .p1--black {
@@ -29,9 +41,4 @@
 	font-size: 1.58vw;
 	line-height: 1.1;
 	font-variation-settings: 'wght' 480;
-}
-
-.link {
-	font-size: 1.58vw;
-	font-variation-settings: 'wght' 500;
 }
