--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,8 +10,9 @@ $z-preloader: 6;
 $default-transition: all 0.5s ease;
 
 $z-header: 5;
-$z-mask: 6;
-$z-preloader: 7;
+$z-nav: 6;
+$z-mask: 7;
+$z-preloader: 8;
 
 $default-gap: 3.704vw;
 
