--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -9,6 +9,7 @@
 
 body {
 	font-family: $font;
+	font-stretch: normal;
 	// overflow: hidden;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
