--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -9,7 +9,9 @@
 			url('#{$file-path}.woff2') format('woff2 supports variations'),
 			url('#{$file-path}.woff2') format('woff2-variations');
 		font-weight: $weight;
+
 		font-display: swap;
+		font-style: normal;
 	}
 }
 
