--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -7,28 +7,28 @@
 	padding: 0;
 }
 
-html.lenis,
-html.lenis body {
-	height: auto;
-}
+// html.lenis,
+// html.lenis body {
+// 	height: auto;
+// }
 
-.lenis:not(.lenis-autoToggle).lenis-stopped {
-	overflow: clip;
-}
+// .lenis:not(.lenis-autoToggle).lenis-stopped {
+// 	overflow: clip;
+// }
 
-.lenis.lenis-smooth [data-lenis-prevent] {
-	overscroll-behavior: contain;
-}
+// .lenis.lenis-smooth [data-lenis-prevent] {
+// 	overscroll-behavior: contain;
+// }
 
-.lenis.lenis-smooth iframe {
-	pointer-events: none;
-}
+// .lenis.lenis-smooth iframe {
+// 	pointer-events: none;
+// }
 
-.lenis.lenis-autoToggle {
-	transition-property: overflow;
-	transition-duration: 1ms;
-	transition-behavior: allow-discrete;
-}
+// .lenis.lenis-autoToggle {
+// 	transition-property: overflow;
+// 	transition-duration: 1ms;
+// 	transition-behavior: allow-discrete;
+// }
 
 body {
 	font-family: $font;
