fix font + footer logo size

--- a/assets/scss/_text.scss
+++ b/assets/scss/_text.scss
@@ -24,7 +24,8 @@
 	line-height: 1.1;
 	font-variation-settings: 'wght' 480;
 	letter-spacing: -2px;
-	text-transform: uppercase;
+	text-transform: lowercase;
+	text-transform: capitalize;
 
 	@include media('<phone') {
 		font-size: 12vw;
