--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,6 +4,7 @@ $color-grey: #9f9f9f;
 $color-purple: #9280e6;
 $color-teal: #3cb7a5;
 $color-orange: #e9512c;
+$color-dark: #222124;
 
 $z-preloader: 6;
 
