--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -30,6 +30,10 @@ html.lenis body {
 	transition-behavior: allow-discrete;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	font-family: $font;
 	font-stretch: normal;
