--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -30,9 +30,9 @@ html.lenis body {
 	transition-behavior: allow-discrete;
 }
 
-html {
-	scroll-behavior: smooth;
-}
+// html {
+// 	scroll-behavior: smooth;
+// }
 
 body {
 	font-family: $font;
